# AImpostor

./: .gitignore  README.md  code_ale.py  pyproject.toml
.github/workflows/: ci.yml
examples/: groq_english.py  groq_italian.py  ollama.py
framework/: README.md  agent.py  config.json  game.py  human.py  main.py  ollama_manager.py  requirements.txt
framework/utils/: data_types.py  llm_manager.py  player.py
tests/: conftest.py  test_agent.py  test_game.py  test_game_integration.py  test_game_nodes.py  test_human.py  test_ollama_manager.py
tests/fixtures/: mock_llm.py
